--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "LogiblockIDE-LaunchUpdate",
-	"version": "0.3.4",
+	"version": "0.3.5",
 	"private": true,
 	"description": "Logiblock IDE Launch/auto-update component",
 	"license": "Proprietary",
@@ -12,8 +12,8 @@
 	},
 	"dependencies":
 	{
-		"moduleverse": ">=0.1.9",
-		"q": "0.9.6"
+		"moduleverse": ">=0.1.10",
+		"noq": ">=0.0.3"
 	},
 	"devDependencies":
 	{
