changed name now that N-W 0.6+ shows the package.json::name field as the Mac App title; bumped version to 0.3.6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "LogiblockIDE-LaunchUpdate",
-	"version": "0.3.5",
+	"name": "LogiblockIDE",
+	"version": "0.3.6",
 	"private": true,
 	"description": "Logiblock IDE Launch/auto-update component",
 	"license": "Proprietary",
