apply new __dirname derivation ass seen in outbreakinc/nitride/issues/3 and bump the version number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "LogiblockIDE",
-	"version": "0.3.6",
+	"version": "0.3.7",
 	"private": true,
 	"description": "Logiblock IDE Launch/auto-update component",
 	"license": "Proprietary",
@@ -8,7 +8,7 @@
 	"main": "Launchupdate.html",
 	"window":
 	{
-		"toolbar": false
+		"toolbar": true
 	},
 	"dependencies":
 	{
